Fixed build for windows.

--- a/.github/workflows/build-libs.yml
+++ b/.github/workflows/build-libs.yml
@@ -95,13 +95,13 @@ jobs:
       if: matrix.target == 'Windows' && matrix.mode == 'debug'
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild . /t:Metek-UI /m /p:Configuration=Debug
+      run: msbuild . /m /p:Configuration=Debug
 
     - name: Build Libs
       if: matrix.target == 'Windows' && matrix.mode == 'release'
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild . /t:Metek-UI /m /p:Configuration=Release
+      run: msbuild . /m /p:Configuration=Release
 
     - uses: actions/upload-artifact@v4.3.1
       with:
