--- a/.github/workflows/build-libs.yml
+++ b/.github/workflows/build-libs.yml
@@ -113,7 +113,28 @@ jobs:
     name: Publish release
     runs-on: ubuntu-latest
     needs: [ build-libs ]
+    permissions:
+      contents: write
+      id-token: write
+      deployments: write
     steps:
       - uses: actions/download-artifact@v4.1.4
       - name: Display structure of downloaded files
         run: ls -R
+      - name: Run Script
+        shell: bash
+        run: |
+              for dir in */; do
+                dir=${dir%/}
+                zip_file="$dir.zip"
+                zip -r "$zip_file" "$dir"
+                sha256sum_value=$(sha256sum "$zip_file" | awk '{print $1}')
+                echo "### $zip_file" >> "release.md"
+                echo "SHA-256: $sha256sum_value" >> "release.md"
+                echo "" >> "release.md"
+              done
+      - uses: actions/upload-artifact@v4.3.1
+        with:
+          name: Release
+          path: |
+            release.md
