--- a/.github/workflows/build-libs.yml
+++ b/.github/workflows/build-libs.yml
@@ -51,6 +51,9 @@ jobs:
       with:
         submodules: true
 
+    - name: Create folder
+      run: |
+        mkdir -p Libs/include
 
     - name: Add MSBuild to PATH
       if: matrix.target == 'Windows'
@@ -119,11 +122,14 @@ jobs:
       deployments: write
     steps:
       - uses: actions/download-artifact@v4.1.4
-      - name: Display structure of downloaded files
-        run: ls -R
+      - name: Get current date
+        id: date
+        run: echo "date=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_OUTPUT
       - name: Run Script
         shell: bash
         run: |
+              echo "# Libs " > "release.md"
+              echo "" >> "release.md"
               for dir in */; do
                 dir=${dir%/}
                 zip_file="$dir.zip"
@@ -133,8 +139,9 @@ jobs:
                 echo "SHA-256: $sha256sum_value" >> "release.md"
                 echo "" >> "release.md"
               done
-      - uses: actions/upload-artifact@v4.3.1
+      - uses: ncipollo/release-action@v1.14.0
         with:
-          name: Release
-          path: |
-            release.md
+          name: "Libs - ${{ steps.date.outputs.date }}"
+          tag: "${{ steps.date.outputs.date }}"
+          artifacts: "*.zip"
+          bodyFile: "release.md"
