--- a/.github/workflows/build-libs.yml
+++ b/.github/workflows/build-libs.yml
@@ -114,7 +114,9 @@ jobs:
       - uses: actions/download-artifact@v4.1.4
       - name: Get current date
         id: date
-        run: echo "date=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_OUTPUT
+        run: |
+          echo "dateTime=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_OUTPUT
+          echo "date=$(date +'%Y-%m-%dS')" >> $GITHUB_OUTPUT
       - name: Run Script
         shell: bash
         run: |
@@ -131,7 +133,7 @@ jobs:
               done
       - uses: ncipollo/release-action@v1.14.0
         with:
-          name: "Libs - ${{ steps.date.outputs.date }}"
-#          tag: "${{ steps.date.outputs.date }}"
+          name: "Libs - ${{ steps.date.outputs.dateTime }}"
+          tag: "${{ steps.date.outputs.date }}"
           artifacts: "*.zip"
           bodyFile: "release.md"
