--- a/.github/workflows/build-libs.yml
+++ b/.github/workflows/build-libs.yml
@@ -23,6 +23,17 @@ jobs:
           mode: debug
           toolset: clang
 
+        - os: windows-2022
+          name: Windows 2022
+          target: Windows
+          mode: release
+          toolset: msvc
+
+        - os: windows-2022
+          name: Windows 2022
+          target: Windows
+          mode: debug
+          toolset: msvc
         #- os: ubuntu-22.04
         #  name: Ubuntu 22.04
         #- os: macos-12
@@ -73,7 +84,7 @@ jobs:
         image_url: https://github.com/MetekGame/freebsd-builder/releases/download/v0.0.2/freebsd-13.2-x86-64.qcow2
         run: |
             premake5 gmake2
-            gmake config=release -j4
+            gmake config=release_clang -j4
 
     - name: Build Libs
       if: matrix.target == 'FreeBSD' && matrix.mode == 'debug'
@@ -86,16 +97,23 @@ jobs:
         image_url: https://github.com/MetekGame/freebsd-builder/releases/download/v0.0.2/freebsd-13.2-x86-64.qcow2
         run: |
             premake5 gmake2
-            gmake -j4
-
-
-    - name: Build Libs
-      if: matrix.target == 'Windows' && matrix.mode == 'debug'
-      run: msbuild . /m /p:Configuration=Debug
+            gmake config=debug_clang -j4
 
     - name: Build Libs
-      if: matrix.target == 'Windows' && matrix.mode == 'release'
-      run: msbuild . /m /p:Configuration=Release
+      if: matrix.target == 'Windows' && matrix.mode == 'debug' && matrix.toolset == 'clang'
+      run: msbuild . /m /p:Configuration=Debug Clang
+
+    - name: Build Libs
+      if: matrix.target == 'Windows' && matrix.mode == 'debug' && matrix.toolset == 'msvc'
+      run: msbuild . /m /p:Configuration=Debug MSVC
+
+    - name: Build Libs
+      if: matrix.target == 'Windows' && matrix.mode == 'release' && matrix.toolset == 'clang'
+      run: msbuild . /m /p:Configuration=Release Clang
+
+    - name: Build Libs
+      if: matrix.target == 'Windows' && matrix.mode == 'debug' && matrix.toolset == 'msvc'
+      run: msbuild . /m /p:Configuration=Release MSVC
 
     - uses: actions/upload-artifact@v4.3.1
       with:
@@ -116,8 +134,8 @@ jobs:
       - name: Get current date
         id: date
         run: |
-          echo "dateTime=$(date +'%Y-%m-%dT%H:%M:%S')" >> $GITHUB_OUTPUT
-          echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+          echo "dateTime=$(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_OUTPUT
+          echo "date=$(date +'%Y-%m-%d_%H_%M_%S')" >> $GITHUB_OUTPUT
       - name: Run Script
         shell: bash
         run: |
@@ -132,9 +150,11 @@ jobs:
                 echo "SHA-256: $sha256sum_value" >> "release.md"
                 echo "" >> "release.md"
               done
-      - uses: ncipollo/release-action@v1.14.0
-        with:
-          name: "Libs - ${{ steps.date.outputs.dateTime }}"
-          tag: "${{ steps.date.outputs.date }}"
-          artifacts: "*.zip"
-          bodyFile: "release.md"
+      - name: Display structure of downloaded files
+        run: ls -R
+      # - uses: ncipollo/release-action@v1.14.0
+      #   with:
+      #     name: "Libs - ${{ steps.date.outputs.dateTime }}"
+      #     tag: "${{ steps.date.outputs.date }}"
+      #     artifacts: "*.zip"
+      #     bodyFile: "release.md"
