--- a/.github/workflows/build-libs.yml
+++ b/.github/workflows/build-libs.yml
@@ -44,13 +44,13 @@ jobs:
           name: FreeBSD 13.2
           target: FreeBSD
           configuration: release
-          platform: Clang
+          platform: clang
 
         - os: ubuntu-22.04
           name: FreeBSD 13.2
           target: FreeBSD
           configuration: debug
-          platform: Clang
+          platform: clang
 
     steps:
     - uses: actions/checkout@v4.1.1
