--- a/.github/workflows/build-libs.yml
+++ b/.github/workflows/build-libs.yml
@@ -55,11 +55,11 @@ jobs:
           configuration: Release
           platform: Clang
 
-        # - os: windows-2022
-        #   name: Windows 2022
-        #   target: Windows
-        #   configuration: Debug
-        #   platform: Clang
+        - os: windows-2022
+          name: Windows 2022
+          target: Windows
+          configuration: Debug
+          platform: Clang
 
         - os: windows-2022
           name: Windows 2022
@@ -67,11 +67,11 @@ jobs:
           configuration: Release
           platform: MSVC
 
-        # - os: windows-2022
-        #   name: Windows 2022
-        #   target: Windows
-        #   configuration: Debug
-        #   platform: MSVC
+        - os: windows-2022
+          name: Windows 2022
+          target: Windows
+          configuration: Debug
+          platform: MSVC
 
         #- os: ubuntu-22.04
         #  name: Ubuntu 22.04
@@ -84,11 +84,11 @@ jobs:
           configuration: Release
           platform: clang
 
-        # - os: ubuntu-22.04
-        #   name: FreeBSD 13.2
-        #   target: FreeBSD
-        #   configuration: Debug
-        #   platform: clang
+        - os: ubuntu-22.04
+          name: FreeBSD 13.2
+          target: FreeBSD
+          configuration: Debug
+          platform: clang
 
     steps:
     - uses: actions/checkout@v4.1.6
