--- a/.github/workflows/build-libs.yml
+++ b/.github/workflows/build-libs.yml
@@ -146,7 +146,7 @@ jobs:
 
     - uses: actions/upload-artifact@v4.3.3
       with:
-        name: Libs_${{ matrix.name }}_${{ matrix.platform }}
+        name: Libs_${{ matrix.target }}_${{ matrix.platform }}_${{ matrix.configuration }}
         path: |
           Libs
 
