--- a/.github/workflows/build-vspkg.yml
+++ b/.github/workflows/build-vspkg.yml
@@ -81,6 +81,7 @@ jobs:
         shell: bash
         image_url: https://github.com/MetekGame/freebsd-builder/releases/download/v0.0.3/freebsd-13.2-x86-64.qcow2
         run: |
+            sudo pkg install zip unzip
             cd vcpkg
             chmod +x bootstrap-vcpkg.sh
             ./bootstrap-vcpkg.sh -disableMetrics
