--- a/.github/workflows/build-vspkg.yml
+++ b/.github/workflows/build-vspkg.yml
@@ -85,7 +85,7 @@ jobs:
             cd vcpkg
             chmod +x bootstrap-vcpkg.sh
             ./bootstrap-vcpkg.sh -disableMetrics
-            ./vcpkg.exe install cryptopp:x86-freebsd-static fmt:x86-freebsd-static zlib:x86-freebsd-static lzo:x86-freebsd-static libjpeg-turbo:x86-freebsd-static libpng:x86-freebsd-static devil:x86-freebsd-static libwebp:x86-freebsd-static --x-install-root=../Libs
+            ./vcpkg install cryptopp:x86-freebsd-static fmt:x86-freebsd-static zlib:x86-freebsd-static lzo:x86-freebsd-static libjpeg-turbo:x86-freebsd-static libpng:x86-freebsd-static devil:x86-freebsd-static libwebp:x86-freebsd-static --x-install-root=../Libs
 
     - uses: actions/upload-artifact@v4.3.3
       with:
